--- a/the-webapp/package.json
+++ b/the-webapp/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@pinecone-database/pinecone": "^0.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
