--- a/the-webapp/package.json
+++ b/the-webapp/package.json
@@ -18,6 +18,7 @@
     "pinecone-client": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "^5.0.1",
     "ts-jest": "^29.1.0",
     "web-vitals": "^2.1.4"
@@ -55,8 +56,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "typescript": "^5.1.3"
+    "jest": "^29.5.0"
   },
   "jest": {
     "moduleNameMapper": {
